--- a/src/notes.ini
+++ b/src/notes.ini
@@ -115,7 +115,7 @@ impl PhysicalOperator for EmptyExec {
 ////////////////---------------/////////////////
 
 // ============================================================================
-// PROJECT: Minimalist Vectorized Query Engine (V3 - Production Style)
+// PROJECT: Minimalist Vectorized Query Engine
 // ROLE: Principal Rust Systems Engineer
 // ============================================================================
 
@@ -296,7 +296,6 @@ The Fix: Use Rayon to scan both files in parallel or split the files into "shard
 
 3. Avoid String Column Names in Batches
 Your RecordBatch likely carries a Vec<String> for column names. Comparing strings or cloning them during every next_batch call is slow.
-
 The Fix: Use "Interned Strings" or simple usize IDs to identify columns inside the pipeline.
 
 4. Zero-Copy Deserialization
@@ -306,31 +305,43 @@ The Fix: Use Memory Mapping (mmap). This tells the OS to map the file directly i
 
 5. Bit-Packed Filter Masks
 Your filter mask is a Vec<bool>. In Rust, a bool takes 1 entire byte (8 bits).
-
 The Fix: Use a BitSet (or Roaring Bitmap). You can store 8 "Keep/Toss" decisions in a single byte, making the mask 8x smaller and much faster for the CPU to read.
 
 6. Columnar Compression (Dictionary Encoding)
 If you have a "Department" column with only 3 values (Sales, HR, Engineering) repeated 1 million times, storing the strings is wasteful.
-
 The Free Fix: Store them as integers (0, 1, 2) and only translate them to strings at the very end when printing.
 
 7. Fixed-Size Batching
 If your batches are too small (e.g., 10 rows), the "function call overhead" kills performance. If they are too big (e.g., 1 million rows), they don't fit in the CPU L1 Cache.
-
 The Fix: Optimize batch sizes to be exactly 1024 or 4096 rows. This is the "sweet spot" for modern CPU caches.
 
 8. Predicate Pushdown
 Right now, you "Zip" everything and THEN "Filter." If the filter fails, you wasted time zipping the salary.
-
 The Fix: Push the filter all the way down to the ScanWorker. Only read the Salary from the disk if the Age already passed the test. This saves massive amounts of Disk I/O.
 
 9. Loop Unrolling & Branch Prediction
 If your code has a lot of if statements inside the loops, the CPU gets "confused" (Branch Misprediction).
-
 The Fix: Write the code in a way that the CPU can predict the next step easily, or use #[inline(always)] hints to help the compiler optimize the assembly code.
 
 10. Memory Pool Allocation
 Allocating new Vecs for every batch causes the "Global Allocator" to slow down.
-
 The Fix: Use a Buffer Pool. Re-use the same memory buffers for every batch instead of throwing them away and asking the OS for new ones.
 
+
+
+
+Repo 1:
+Focus: Core Logic and Flow.
+Goal: Understand how data "flows" from a file through operators.
+
+Repo 2: The High-Performance Engine 
+Focus: Hardware Efficiency and Zero-Copy.
+Goal: Move from "Functional" to "Mechanical Sympathy" 
+
+Repo 3: The Generic/Schema-Aware Store
+Focus: Flexibility and Type Systems.
+Goal: Stop hardcoding i32 and .bin files. Build a system that reads a metadata.json and can handle Strings, Floats, and Booleans.
+
+Repo 4: The Optimizer (The "SQL" Layer)
+Focus: Planning and Intelligence.
+Goal: The user provides a "Request" (Logical Plan), and the engine compiles it into an "Execution" (Physical Plan).
